--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
 <!--			<version>6.3.0.Final</version>-->
 <!--			<type>pom</type>-->
 <!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.hibernate</groupId>-->
+<!--			<artifactId>hibernate-core</artifactId>-->
+<!--			<version>6.3.0.Final</version>-->
+<!--			<type>pom</type>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
