--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<version>0.0.5</version>
 	<name>DataStore</name>
 	<description>DataStore</description>
-	<packing>war</packing>
+	<packaging>war</packaging>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
